[employee-spring-boot][Christian & Raymond]Test: Fix mapper